--- a/views/adminDashboard.hbs
+++ b/views/adminDashboard.hbs
@@ -49,7 +49,7 @@
                                         <div class="text-center">
                                             <img style="width:130px;height:130px;border-radius:50%" src="/static/image/img/pizza.jpg" alt="">
                                             <h3 class="my-2 primary-color">Available Foods</h3>
-                                            <h2 class="primary-color mb-0 pb-2">432+</h2>
+                                            <h2 class="primary-color mb-0 pb-2">{{foodCount}}+</h2>
                                         </div>
                                     </div>
                                 </div>
@@ -67,7 +67,10 @@
                             </div>
 
                         </div>
+
+                      
                     </div>
+                   
                 </div>
             </div>
         </div>
