--- a/views/index.hbs
+++ b/views/index.hbs
@@ -6,7 +6,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Foodies</title>
     {{> headers }}
-
 </head>
 
 <body>
@@ -100,9 +99,7 @@
     <section class="container my-5">
       <div class="text-center mx-md-5 px-md-5">
         <h2 class="pb-0 mb-0">Explore Our Foods</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores fugiat quidem facilis enim aliquam
-          possimus ipsa, minus suscipit rerum molestiae recusandae. Tempore neque, provident id veniam consectetur
-          soluta repudiandae rerum?</p>
+        <p>Embark on a Culinary Journey with Us! Explore our curated selection of mouthwatering dishes, each crafted with the finest ingredients and bursting with flavor. Whether you’re craving something savory, sweet, or a bit of both, our diverse menu has something to satisfy every palate. From timeless classics to innovative new creations, every dish is a celebration of taste. Dive in, discover your new favorite, and let every bite transport you to a world of culinary delight.</p>
       </div>
       <div class="row my-5 ">
         <div class="col-md-4">
@@ -159,18 +156,17 @@
         </div>
         <div class="carousel-inner">
           <div class="carousel-item text-center active">
-            <img style="width:150px;height:auto;border-radius:50%" src="/static/image/review/review-1.jpg" alt="...">
+            <img style="width:150px;height:auto;border-radius:50%" src="/static/image/review/review-3.jpg" alt="...">
             <div class="my-4">
               <h4 class="">Iddrisu Hafiz Wumbee</h4>
               <p class="text-light"> A manager and CEO of Foodies Food ordering system..</p>
             </div>
           </div>
           <div class="carousel-item text-center ">
-            <img style="width:150px;height:auto; border-radius:50%" src="/static/image/review/review-2.jpg" alt="...">
+            <img style="width:150px;height:auto; border-radius:50%" src="/static/image/review/review-4.jpg" alt="...">
             <div class="my-4">
-              <h4 class="">Mavis Wiltom</h4>
-              <p class="text-light">Some representative placeholder content for the first slide Lorem ipsum dolor sit amet consectetur
-                deleniti Lorem, ipsum dolor sit amet consectetur adipisicing elit. sed obcaecati..</p>
+              <h4 class="">Tahiru Rabiu</h4>
+              <p class="text-light">Amazing experience! The food was fresh, hot, and full of flavor. Highly recommend the Hamburger. Keep up the great work!..</p>
             </div>
           </div>
 
@@ -195,7 +191,7 @@
     <div class="container">
       <div class="text-center">
         <h2 class="mb-0">Hurry Up! Subscribe Our Newsletter And Get 25% Off</h2>
-        <p class="text-color">Limmited time offer for this month. No creadit card required.</p>
+        <p class="text-color">Limited time offer for this month. No creadit card required.</p>
         <div class="text-center my-5">
           <form action="">
             <div class="row">
@@ -212,17 +208,10 @@
     </div>
   </section>
 
-  <section id="footer">
 
-    <div class="text-center">
-      <a href="">Resiter</a>
-      <a href="">Forum</a>
-      <a href="">Affilate</a>
-      <a href="">FAQ</a><br>
-      <small class="mt-5 text-light">@ 2024. Foodie. All rights reserved.</small>
-    </div>
-  </section>
 
+
+   {{>footer }}
  
 </body>
 
