--- a/views/partials/headers.hbs
+++ b/views/partials/headers.hbs
@@ -1,31 +1,52 @@
+<link rel="icon" href="/static/image/icons8.png" type="image/png">
+<link rel="shortcut icon" href="/static/image/icons8.png" type="image/png">
+<link rel="icon" type="image/png" sizes="32x32" href="/static/image/icons8-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="/static/image/icons8-16x16.png">
+<link rel="apple-touch-icon" sizes="180x180" href="/static/image/icons8-180x180.png">
 
-  <!-- Bootstrap CSS (latest version) -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
-    integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!-- Bootstrap CSS (latest version) -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" 
+  integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 
-  <!-- Font Awesome CSS -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css" 
-    integrity="sha512-xh6O/CkQoPOWDdYTDqeRdPCVd1SpvCA9XXcUnZS2FmJNp1coAFzvtCN9BmamE+4aHK8yyUHUSCcJHgXloTyT2A==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer">
+<!-- Boxicons CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/typicons.font@2.1.2/src/font/typicons.css">
 
-  <!-- Custom CSS -->
-  <link rel="stylesheet" href="/static/css/style.css">
-  <link rel="stylesheet" href="/static/css/fontawesome-all.css">
-  <link rel="stylesheet" href="/static/css/fa-brands.css">
-<link rel="stylesheet" href="/css/all.min.css">
-<link rel="stylesheet" href="/css/brands.css">
-<link rel="stylesheet" href="/css/fontawesome.css">
-  <!-- jQuery (latest version) -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
-    integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+{{!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> --}}
+ {{!-- <script src="https://unpkg.com/boxicons@2.1.4/dist/boxicons.js"></script> --}}
 
-  <!-- Bootstrap JS (latest version) -->
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
-    integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+<!-- Custom CSS -->
+<link rel="stylesheet" href="/static/css/style.css">
 
-  <!-- SweetAlert2 -->
-  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<!-- jQuery (latest version) -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" 
+  integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" 
+  crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
-  <!-- Custom JS -->
-  <script src="/static/js/script.js"></script>
+<!-- Bootstrap JS (latest version) -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" 
+  integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
+<!-- SweetAlert2 -->
+<script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+<!-- Custom JS -->
+<script src="/static/js/script.js"></script>
+
+<div id="chat-container" class="hidden">
+  <div id="chat-header">
+    <h3>AI Assistant</h3>
+    <button id="close-chat">×</button>
+  </div>
+  <div id="chat-messages"></div>
+  <div id="chat-input-container">
+    <input type="text" id="user-input" placeholder="Type your message...">
+    <button onclick="sendMessage()">
+      <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <line x1="22" y1="2" x2="11" y2="13"></line>
+        <polygon points="22 2 15 22 11 13 2 9 22 2"></polygon>
+      </svg>
+    </button>
+  </div>
+</div>
+
+<button id="show-chat" class="chat-bubble">Chat</button>
