--- a/views/partials/navbar.hbs
+++ b/views/partials/navbar.hbs
@@ -12,16 +12,19 @@
           <a class="nav-link active" aria-current="page" href="/">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#counter">About us</a>
+          <a class="nav-link" href="/about-us">About us</a>
         </li>
 
         <li class="nav-item">
           <a class="nav-link " href="/foods/1">Explore foods</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " data-bs-toggle="modal" data-bs-target="#staticBackdrop"><i
-              class="fas fa-shopping-basket ps-3"></i><small class="cart-num"></small></a>
-        </li>
+<li class="nav-item">
+  <a class="nav-link" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+    cart
+    <small class="cart-num"></small>
+  </a>
+</li>
+
 
 
         {{#if loginUser}}
