--- a/views/showDishes.hbs
+++ b/views/showDishes.hbs
@@ -35,9 +35,9 @@
                         <img style="height:210px" src="/static/dishImage/{{this.photo}}" class="img-fluid mb-2" alt="">
                         <h4>{{this.dname}}</h4>
                         <p class="text-color">Time : {{this.dtime}} Minutes | Serve {{this.dserve}}</p>
-                        <h2 class="primary-color mb-3"> <i class="fa fa-usd"></i>{{#discount this.dprice
+                        <h2 class="primary-color mb-3"> <i class="fa fa-usd"></i>Gh&#8373; {{#discount this.dprice
                             this.ddiscount}}{{/discount}} <del class="text-muted"><i
-                                    class="fa fa-usd"></i>{{this.dprice}}</del></h2>
+                                    class="fa fa-usd"></i> {{this.dprice}}</del></h2>
                                     <div style=" display: flex; justify-content: space-between; padding: 7px;">
                                         <div>
                             <button onclick="addFoodToBasket('{{this._id}}','{{this.dname}}','{{this.dprice}}','{{this.photo}}' )" class="main-btn">Add To Basket</button>
@@ -46,11 +46,9 @@
                             <a href="/create-payment-intent/{{this._id}}" class="main-btn">Order</a>
                            
                         </div>
-                        
 
                                     </div>
                         
-
                     </div>
                 </div>
                 {{/each}}
